update dirs