@@ -1,9 +1,9 @@
--Xms1536m
--Xmx1536m
--XX:MetaspaceSize=256m
--XX:MaxMetaspaceSize=512m
+-Xms1036m
+-Xmx1036m
+-XX:MetaspaceSize=800m
+-XX:MaxMetaspaceSize=800m
 -XX:ReservedCodeCacheSize=480m
--XX:+UseG1GC
+-XX:+UseConcMarkSweepGC
 
 -XX:SoftRefLRUPolicyMSPerMB=50
 -ea
